--- a/forms.html
+++ b/forms.html
@@ -8,13 +8,15 @@
 <body>
     <h1>Formulário de Cadastro</h1>
     <p>
+        <form>
         <label for="name">Nome:</label>
         <input type="text" id="name"/><br>
         <label for="email">E-mail:</label>
         <input type="email" id="email"/><br>
         <label for="pwd">Senha:</label>
         <input type="password" id="pwd"/><br>
-        <input type="submit" value="Cadastrar">
+        <button type="button">Cadastrar</button>
+    </form>
     </p>
 </body>
 </html>
