--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="sports">
         <h2>Esportes</h2>
         <article>
             <img src="./imagens/futebol.jpg" alt="Bola de futebol no gramado" />
@@ -74,7 +74,7 @@
             <a href="#" title="Leia a notícia completa">Ler mais</a>
         </article>
     </section>
-    <section>
+    <section id="economy">
         <h2>Economia</h2>
         <article>
             <img src="./imagens/dolares.jpg" alt="Muitos dólares" />
@@ -110,7 +110,7 @@
             <a href="#" title="Leia a notícia completa">Ler mais</a>
         </article>
     </section>
-    <section>
+    <section id="entertnaiment">
         <h2>Entretenimento</h2>
         <article>
             <img src="./imagens/TLOU.jpg" alt="Capa da segunda temporada de The Last of Us" />
@@ -146,7 +146,7 @@
             <a href="#" title="Leia a notícia completa">Ler mais</a>
         </article>
     </section>
-    <section>
+    <section id="technology">
         <h2>Tecnologia</h2>
         <article>
             <img src="./imagens/apple.png" alt="Logo da empresa de tecnologia Apple" />
